--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,19 +19,22 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">La Corale</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Foto</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Video</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#team">Chi siamo</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#clients">Rassegna Stampa</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Scrivici</a>
                     </li>
                 </ul>
             </div>
@@ -44,9 +47,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-lead-in">Corale</div>
+                <div class="intro-heading">Quarta Eccedente</div>
+                <a href="#services" class="page-scroll btn btn-xl">vuoi sapere di più di noi?</a>
             </div>
         </div>
     </header>
