--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,11 +3,43 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">La Corale</h2>
+                    <p class="text-muted">Il nome Quarta Eccedente deriva da un simpatico doppio senso tra un intervallo musicale e il numero delle componenti della formazione originale.
+
+                        La corale nacque infatti come quartetto vocale nell'autunno del 2001, già allora diretta da Fabio Cavaciocchi.
+                        
+                        Il suo primario obiettivo fu quello di fare da solida base per la costruzione di un insieme più numeroso come poi in effetti è stato.
+                        
+                        Nell'inverno del 2002, il quartetto fu tra i promotori della realizzazione del musical sulla vita di San Francesco d'Assisi “Forza venite gente”, portato in scena per undici volte in diversi teatri tra i quali, i più prestigiosi, il Politeama Pratese e il Puccini di Firenze.
+                        
+                        Fu questa importante esperienza ad avvicinare diverse persone al canto d'insieme e a far nascere e consolidare il gruppo che andrà a costituire l'ossatura della nascente corale.
+                        
+                        Terminata l'avventura di “Forza venite gente” nella primavera del 2005, la corale, con un gruppo di venticinque elementi divisi in quattro sezioni miste, iniziò la sua attività concertistica nel dicembre dello stesso anno.
+                        
+                        Nel gennaio del 2007 si costituì ufficialmente la Corale Quarta Eccedente.
+                        
+                        Il suo repertorio spazia dalla musica rinascimentale, sia sacra che profana, a quella contemporanea, toccando vari generi di varie epoche.
+                        
+                        La corale ha cantato principalmente nel comprensorio pratese e fiorentino spesso curando anche l'organizzazione degli eventi e prestando la propria attività per il finanziamento di opere benefiche.
+                        
+                        Tra i concerti da ricordare, quelli più significativi, nelle cattedrali di Prato e Fiesole, nelle chiese fiorentine di San Gaetano, Santa Maria Novella, sempre a Firenze a Palazzo Strozzi, nella Pinacoteca della Certosa, nella limonaia di villa Strozzi e nel salone dei Cinquecento in Palazzo Vecchio.
+                        
+                        Ha inoltre tenuto concerti e partecipato a rassegne a Siena, Buti (Pisa), Pistoia, Poggibonsi (Siena), Genova, Bologna, Nonantola e Sassuolo (Modena), Sorbolo (Parma), Cortona (Arezzo), San Miniato (Pisa).
+                        
+                        Nel 2010 ha realizzato il suo primo cd “Voci a tempo” a coronamento del lavoro e della ricerca musicale svolta negli anni.
+                        
+                        Nel 2012 è stata ospite alla prestigiosa rassegna di cori organizzata dal coro Farnesiano di Piacenza.
+                        
+                        Nel corso del 2018 l'organico ha fortunatamente potuto contare sull'ingresso di nuove giovani voci che hanno portato una ventata di fiducia e carica positiva.
+                        
+                        Nel luglio del 2018 ha contribuito alla messa in scena de La buona novella di De Andrè in collaborazione con la scuola di musica di Vaiano.
+                        
+                        A novembre 2018 la Corale Quarta Eccedente ha cantato al Teatro Regio di Parma, ospite del Coro Cai Mariotti in occasione della XXXVII Rassegna del "BEL CANT", e nel Dicembre 2018 ha partecipato ad una serie di concerti in Germania, nell'ambito del 30° anniversario del gemellaggio Prato-Wangen.
+                        
+                        Dal 2008 organizza annualmente la rassegna “InCanti Corali” che ha visto la partecipazione di formazioni ospiti di alto livello.</p>
                 </div>
             </div>
-            <div class="row text-center">
+           <!--  <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -32,6 +64,6 @@
                     <h4 class="service-heading">Web Security</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
-            </div>
+            </div>-->
         </div>
     </section>
