--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,11 +3,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Video</h2>
+                    <h3 class="section-subheading text-muted"> </h3>
                 </div>
             </div>
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
                         <li>
@@ -74,7 +74,7 @@
                             </div>
                         </li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
