filled examples of images

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-         <a class="navbar-log" href="#"><img src="img/img_corale/logo.jpg" alt="Logo"></a>
+         <a class="navbar-log" href="#"><img src="img/logos/logo.jpg" alt="Logo"></a>
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -69,7 +69,7 @@
         background-image: linear-gradient(to bottom right, #ffffff, rgba(0, 0, 0, 0)); /* Utilizzo di rgba per il colore trasparente */
     }
     .navbar-log img {
-        max-width: 70px; /* Puoi regolare la larghezza massima a tuo piacimento */
+        max-width: 80px; /* Puoi regolare la larghezza massima a tuo piacimento */
         height: auto;
     }
 </style>
