added some thimbs

--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -16,7 +16,7 @@
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="" style="width: 100%; height: auto;">
+                    <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>{{ post.title }}</h4>
@@ -27,4 +27,3 @@
         </div>
     </div>
 </section>
-
