--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -2,26 +2,37 @@
     <section id="clients">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Rassegna Stampa</h2>
+                    <h3 class="section-subheading text-muted">Un grazie a chi ci supporta scrivendo di noi</h3>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                <ul class="press-list">
+                    {% for item in site.data.press %}
+                      <li><a href="{{ item.url }}" target="_blank">{{ item.title }}</a></li>
+                    {% endfor %}
+                  </ul>                              
                 </div>
             </div>
         </div>
     </section>>
+
+    <head>
+        <style>
+          .press-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+          }
+      
+          .press-list li {
+            margin-bottom: 10px;
+          }
+      
+          .press-list li::before {
+            content: "\2022";
+            color: #fed136;
+            font-size: 12px;
+            margin-right: 5px;
+          }
+        </style>
+      </head>
