--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -357,6 +357,8 @@ section h3.section-subheading {
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
+    max-width: 280px;
+
 }
 
 #portfolio .portfolio-item .portfolio-link {
@@ -364,6 +366,7 @@ section h3.section-subheading {
     position: relative;
     margin: 0 auto;
     max-width: 400px;
+
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
