changed background image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -68,7 +68,7 @@
         left: 0;
         margin-left: 15px; /* Puoi regolare il margine a tuo piacimento */
         padding: 5px; /* Puoi regolare il padding a tuo piacimento */
-        background-image: linear-gradient(to bottom right, #ffffff, rgba(0, 0, 0, 0)); /* Utilizzo di rgba per il colore trasparente */
+        background-image: linear-gradient(to bottom right, #fff, rgba(0, 0, 0, 0.1)); /* Utilizzo di rgba per il colore trasparente */
     }
     .navbar-log img {
         max-width: 80px; /* Puoi regolare la larghezza massima a tuo piacimento */
