--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -12,21 +12,21 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="control-group form-group">
-                                    <input type="text" class="form-control" placeholder="Il tuo nome *" id="name" required data-validation-required-message="Perfavore scrivi il tuo nome">
+                                    <input type="text" class="form-control" placeholder="Il tuo nome *" id="name" required data-validation-required-message="scrivi il tuo nome">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group form-group">
-                                    <input type="email" class="form-control" placeholder="La tua mail *" id="email" required data-validation-required-message="Perfavore scrivi la tua mail">
+                                    <input type="email" class="form-control" placeholder="La tua mail *" id="email" required data-validation-required-message="scrivi la tua mail">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group form-group">
-                                    <input type="tel" class="form-control" placeholder="Il tuo recapito telefonico *" id="phone" required data-validation-required-message="Perfavore scrivi il tuo numero di telefono">
+                                    <input type="tel" class="form-control" placeholder="Il tuo recapito telefonico *" id="phone" required data-validation-required-message="scrivi il tuo numero di telefono">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="control-group form-group">
-                                    <textarea class="form-control" placeholder="Messaggio *" id="message" required data-validation-required-message="Perfavore scrivi il tuo messaggio"></textarea>
+                                    <textarea class="form-control" placeholder="Messaggio *" id="message" required data-validation-required-message="scrivi il tuo messaggio"></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
