--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -270,7 +270,7 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url('{{site.immagine_sfondo_header}}');
+    background-image: url('{{site.baseurl}}/img/header-bg1.jpg');
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
