test per header a tutta pagina

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,12 +46,16 @@
 
     <!-- Header -->
     <header>
-        <div class="container">
-            <div class="intro-text">
-                <div class="intro-lead-in">Corale</div>
-                <div class="intro-heading">Quarta Eccedente</div>
-                <a href="#services" class="page-scroll btn btn-xl">vuoi sapere di più di noi?</a>
-            </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="container">
+                    <div class="intro-text">
+                        <div class="intro-lead-in">Corale</div>
+                        <div class="intro-heading">Quarta Eccedente</div>
+                        <a href="#services" class="page-scroll btn btn-xl">vuoi sapere di più di noi?</a>
+                    </div>
+                </div>
+             </div>
         </div>
     </header>
 <!--
